# smartx-whitedog

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
client/: .gitignore  README.md  build.yaml  derry.yaml  pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/whitedog/: MainActivity.kt
client/android/app/src/profile/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: api_test.dart  main.dart
client/lib/api/openapi/: example.json
client/server/: Cargo.toml  output.yaml
client/server/src/: main.rs
client/web/: index.html  manifest.json
common/: Cargo.toml
common/src/: api.rs  init.rs  lib.rs  worker.rs
common/src/models/: chrono.rs  mod.rs  status.rs
controller/: Cargo.toml
controller/src/: api.rs  main.rs  status.rs
controller/src/routes/: mod.rs
controller/src/routes/zeus/: apa.rs  apc_dir_purc_aply_e.rs  mod.rs  role.rs
core/: Cargo.toml
core/src/: api.rs  lib.rs
core/src/models/: mod.rs
core/src/models/zeus/: apa.rs  apc_dir_purc_aply_e.rs  mod.rs  role.rs
examples/: Cargo.toml
examples/sheet/: custom_sheet.rs  custom_table.rs
examples/zeus/: apa_get.rs  apc_dir_purc_aply_e_get.rs  dp_request_get.rs
sheet/client/: Cargo.toml
sheet/client/src/: lib.rs
sheet/core/: Cargo.toml
sheet/core/src/: lib.rs  worker.rs
sheet/core/src/models/: header.rs  metadata.rs  mod.rs  raw.rs
src/: main.rs  opts.rs
src/subcommand/: mod.rs
src/subcommand/zeus/: apc_dir_purc_aply_e.rs  mod.rs  role.rs
zeus/client/: Cargo.toml
zeus/client/src/: lib.rs
zeus/core/: Cargo.toml
zeus/core/src/: lib.rs
zeus/core/src/models/: dp.rs  mod.rs
zeus/manager/: Cargo.toml
zeus/manager/src/: api.rs  main.rs  status.rs
zeus/manager/src/routes/zeus/: dp.rs  mod.rs
