[package]
name = "ya-gist-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.13"
