[package]
name = "smartx-whitedog-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["json"] }
rocket = { version = "0.5.0-rc.1", optional = true, default-features = false, features = [
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.13"
