[package]
name = "ya-gist-controller"
version = "0.1.0"
edition = "2018"
description = "GIST Administrative Automation Program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
google-sheets4 = "2.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["full"] }
ya-gist-core = { path = "../core", features = ["rocket"] }
