[package]
name = "ya-gist-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
reqwest2 = ["ya-gist-common/reqwest", "ya-gist-zeus-core/reqwest2"]
rocket2 = ["ya-gist-common/rocket", "ya-gist-zeus-core/rocket2"]

[dependencies]
anyhow = "1.0"
# google-sheets4 = "2.0"
serde = { version = "1.0", features = ["derive"] }
ya-gist-common = { path = "../common" }
ya-gist-zeus-core = { path = "../zeus/core" }
