[package]
name = "smartx-whitedog-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
reqwest2 = [
    "smartx-whitedog-common/reqwest",
    "smartx-whitedog-zeus-core/reqwest2",
]
rocket2 = ["smartx-whitedog-common/rocket", "smartx-whitedog-zeus-core/rocket2"]

[dependencies]
smartx-whitedog-common = { path = "../common" }
smartx-whitedog-zeus-core = { path = "../zeus/core" }
