[package]
name = "openapi-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = [
    "json",
] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
serde = "1.0"
