[package]
name = "ya-gist-sheet-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
google-sheets4 = "2.0"
hyper = "0.14"
hyper-rustls = "0.22"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
ya-gist-common = { path = "../../common" }
yup-oauth2 = "5.0"
