[package]
name = "smartx-whitedog-sheet-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
smartx-whitedog-common = { path = "../../common" }
smartx-whitedog-sheet-client = { path = "../client" }
tokio = { version = "1.8", features = [] }
