[package]
name = "smartx-whitedog-zeus-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = "1.0"
serde_json = "1.0"
smartx-whitedog-zeus-core = { path = "../core", features = ["reqwest2"] }
