[package]
name = "ya-gist-zeus-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
reqwest2 = ["ya-gist-common/reqwest"]
rocket2 = ["rocket", "ya-gist-common/rocket"]

[dependencies]
anyhow = "1.0"
rocket = { version = "0.5.0-rc.1", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
ya-gist-common = { path = "../../common" }
