[package]
name = "smartx-whitedog-zeus-manager"
version = "0.1.0"
edition = "2018"
description = "GIST Administrative Automation Program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["full"] }
smartx-whitedog-zeus-client = { path = "../client" }
smartx-whitedog-zeus-core = { path = "../core", features = [
    "api",
    "reqwest2",
    "rocket2",
] }
